k8s/client.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: signapse
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
