k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: signapse
spec:
  replicas: 5
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: localhost:30500/signapse/client:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            exec:
              command: ["sh", "-c", "nc -z 127.0.0.1 3000"]
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["sh", "-c", "nc -z 127.0.0.1 3000"]
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: signapse
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
  type: NodePort
