k8s/docs.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: signapse
spec:
  selector:
    app: docs
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
