k8s/lakefs.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lakefs
  namespace: signapse
spec:
  selector:
    app: lakefs
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
