k8s/minio.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: signapse
spec:
  selector:
    app: minio
  ports:
    - name: s3-api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  type: ClusterIP
