k8s/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: signapse
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
