k8s/registry-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-server
  namespace: signapse
spec:
  selector:
    app: registry-server
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
      protocol: TCP
  type: NodePort
