k8s/registry-ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: signapse
spec:
  selector:
    app: registry-ui
  ports:
    - port: 5001
      targetPort: 80
      protocol: TCP
  type: ClusterIP
