k8s/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: signapse
spec:
  selector:
    app: server
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
