k8s/traefik-dashboard.ingress.route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.signapse.local`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
